--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,7 +25,7 @@ a {
     position: absolute;
     left: 250px;
     right: 0;
-    top: 50px;
+    top: 0px;
     bottom: 0;
     -webkit-transition: left .3s ease-in-out;
     transition: left .3s ease-in-out;
@@ -35,7 +35,7 @@ a {
 .content {
     width: auto;
     height: 100%;
-    padding: 6px;
+    padding: 0px 6px 6px 6px;
     overflow-y: scroll;
     box-sizing: border-box;
 }
